--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
  
   <div class="field">
-    <%= post_form.label :name %><br />
+    <%= post_form.label :autor %><br />
     <%= post_form.text_field :name %>
   </div>
   <div class="field">
-    <%= post_form.label :title %><br />
+    <%= post_form.label :titulo %><br />
     <%= post_form.text_field :title %>
   </div>
   <div class="field">
-    <%= post_form.label :content %><br />
+    <%= post_form.label :contenido %><br />
     <%= post_form.text_area :content %>
   </div>
-  <h2>Tags</h2>
+  <h4>Tags</h4>
   <%= render :partial => 'tags/form',
              :locals => {:form => post_form} %>
-  <div class="actions">
+  <div class="actions btn btn-primary" >
     <%= post_form.submit %>
   </div>
 <% end %>
