--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,18 @@
-<h1>Listing posts</h1>
+<h1>Blog</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Title</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<div id="post">
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= post.name %></td>
-    <td><%= post.title %></td>
-    <td><%= post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+    <h3><%= post.title %></h3>
+    <div><%= truncate( post.content, :length => 500, :omission =>  "...")  %></div>
+    <div id="credits">
+        <span><b>autor: </b><%= post.name %></span>
+        <span><i class="icon-share-alt"></i><%= link_to 'Ver', post %></span>
+        <span><i class="icon-pencil"></i><%= link_to 'Editar', edit_post_path(post) %></span>
+        <span><i class="icon-trash"></i><%= link_to 'Borrar', post, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+    </div>
 <% end %>
-</table>
+</div>
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path , :class => "btn btn-primary"%>
